feat(timetable): unify period/lab-slot model, add skeleton-then-staff workflow
Merges Period and LabSlot into one shared slot master (root cause of
timetable grids showing more columns than configured periods), adds
CLINICAL as a real session type with its own venue master instead of
folding it into LAB, lets Theory sessions be scoped to a section/batch,
and splits timetable building into two phases: a Skeleton Builder
(place Theory/Lab/Clinical into periods with no staff/room yet) and a
Staffing screen (assign faculty/room afterward with conflict checks)
before a term's draft can be approved. Includes a regression sweep
fixing real gaps this exposed in Faculty Absence, Progress Tracking,
and the Resource Grid (Clinical sessions were invisible there).

Also folds in Round 2's units/progress-tracking/calendar-views/
resource-grids/faculty-absence/staff-swap work, built earlier in the
same effort and not yet committed.

Work in progress: rebuilding the live ODD 2026-2027 term timetable on
the new model was done manually through the UI, not as a code change.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>